--- a/d3/style.css
+++ b/d3/style.css
@@ -5,7 +5,7 @@
 }
 
 .node text {
-    opacity: 0;
+    opacity: 1;
     fill: white;
     font-size: 11px;
 }
@@ -13,3 +13,7 @@
 .node:hover circle {
     fill: darkblue;
 }
+
+/*.node:hover text {*/
+    /*opacity: 1;*/
+/*}*/
